--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
 
 * {
     box-sizing: border-box;
-    margin: 0 auto;
+    margin: 0;
 }
 
 html, body {
@@ -22,6 +22,11 @@ html, body {
 nav {
     width: 100%;
     display: flex;
+    background-color: wheat;
+    position: fixed;
+    justify-content: space-around;
+    height: 40px;
+    border-bottom: 1px solid red; 
 }
 
 #logo {
@@ -31,15 +36,18 @@ nav {
     letter-spacing: 3px;
     text-decoration: none;
     font-weight: 800;
+    padding-top: 8px;
 }
 
 .nav-items {
     display: flex;
     flex-basis: 25%;
     justify-content: space-between;
+    padding-top: 10px;
 }
 
 .nav-items li {
+    width: 100%;
     list-style: none;
 }
 
@@ -49,4 +57,65 @@ nav {
     font-size: 15px;
     letter-spacing: 1.5px;
     text-transform: uppercase;
+}
+
+#menu-bars {
+    font-size: 28px;
+    padding: 7px;
+    color: red;
+    display: none !important;
+}
+
+@media only screen and (max-width: 1150px) {
+    .nav-items {
+        flex-basis: 35%;
+    }
+}
+
+@media only screen and (max-width: 900px) {
+    .nav-items {
+        flex-basis: 45%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .wrapper {
+        overflow-x: hidden;
+    }
+
+    nav {
+       position: relative;
+    }
+
+    #logo {
+       position: absolute;
+       left: 20px;
+       top: 0; 
+    }
+    
+    .nav-items {
+       width: 100%;
+       height: 80px;
+       position: absolute;
+       top: 40px;
+       background-color: rgb(245, 222, 179, 0.8);
+       display: flex;
+       flex-flow: column;
+       align-content: space-between;
+       transform: translateX(100%);
+       transition: transform 0.5 ease;
+    }  
+
+    #menu-bars {
+        display: block !important;
+        position: absolute;
+        right: 30px;
+    }
+
+    .nav-active {
+        transform: translateX(100%);
+    }
+}
+
+@media only screen and (max-width: 640px) {
 }
