--- a/style.css
+++ b/style.css
@@ -103,7 +103,7 @@ nav {
        flex-flow: column;
        align-content: space-between;
        transform: translateX(100%);
-       transition: transform 0.5 ease;
+       transition: transform 0.8s ease;
     }  
 
     #menu-bars {
@@ -113,7 +113,7 @@ nav {
     }
 
     .nav-active {
-        transform: translateX(100%);
+        transform: translateX(0%);
     }
 }
 
