--- a/style.css
+++ b/style.css
@@ -16,7 +16,13 @@ html, body {
 
 .wrapper {
     height: auto !important;
+    height: 100%;
+  
+    /* Box-model */
     min-height: 100%;
+  
+    /* Positioning */
+    margin: 0 auto -60px;
 }
 
 nav {
@@ -26,7 +32,7 @@ nav {
     position: fixed;
     justify-content: space-around;
     height: 40px;
-    border-bottom: 1px solid red; 
+    border-bottom: 2px solid red; 
 }
 
 #logo {
@@ -64,6 +70,28 @@ nav {
     padding: 7px;
     color: red;
     display: none !important;
+}
+
+footer,
+.push {
+  height: 60px;
+}
+
+footer {
+  /* Box-model */
+  padding: 30px 0;
+
+  /* Positioning */
+  clear: both;
+  font-size: 12px;
+
+  /* Typography */
+  color: #ccc;
+  text-align: center;
+
+  /* Visual */
+  background: #666;
+  border-top: 6px solid red;
 }
 
 @media only screen and (max-width: 1150px) {
